After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728189 - Cannot select text via shift+click
Cannot select text via shift+click
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
3.11.x
Other Linux
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-04-14 15:18 UTC by Joanmarie Diggs (IRC: joanie)
Modified: 2014-04-14 16:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (3.32 KB, patch)
2014-04-14 15:18 UTC, Joanmarie Diggs (IRC: joanie)
committed Details | Review

Description Joanmarie Diggs (IRC: joanie) 2014-04-14 15:18:10 UTC
Created attachment 274279 [details] [review]
proposed patch

Steps to reproduce:
1. Disable caret navigation (if it is enabled)
2. Use the mouse to select a portion of the text
3. Use shift + click to modify the selected region

Expected results: The selected region would be modified to add/remove selected text based on the click location.

Actual results: The selection is cleared.
Comment 1 Carlos Garcia Campos 2014-04-14 16:17:15 UTC
Review of attachment 274279 [details] [review]:

Awesome, thanks! Please, push it to both branches.

::: libview/ev-view.c
@@ +4668,3 @@
+				} else if (event->state & GDK_SHIFT_MASK) {
+					GdkPoint end_point;
+					end_point.x = event->x + view->scroll_x;

Please, leave an empty line between declaration block and code.