libview: Fix shift+click text selection

https://bugzilla.gnome.org/show_bug.cgi?id=728189